--- a/Skill Swap/package.json
+++ b/Skill Swap/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^3.10.0",
+    "@livekit/components-react": "^2.9.19",
+    "@livekit/components-styles": "^1.2.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -53,6 +55,9 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.3",
+    "livekit": "^0.0.1",
+    "livekit-client": "^2.17.0",
+    "livekit-server-sdk": "^2.15.0",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-auth": "5.0.0-beta.30",
