Fix Vercel deployment: specify outputDirectory to avoid space in function names

--- a/Skill Swap/vercel.json
+++ b/Skill Swap/vercel.json
@@ -1,4 +1,5 @@
 {
   "buildCommand": "prisma generate && next build",
-  "installCommand": "pnpm install && pnpm prisma generate"
+  "installCommand": "pnpm install && pnpm prisma generate",
+  "outputDirectory": ".next"
 }
