--- a/skill-swap/package.json
+++ b/skill-swap/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.10.0",
     "@livekit/components-react": "^2.9.19",
     "@livekit/components-styles": "^1.2.0",
